welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:11: error: Unmatched closing brace '}' ignored here
 }
 ^